typ fixat alignment

--- a/theme.css
+++ b/theme.css
@@ -46,7 +46,11 @@ img {
 /*      more sidan      */
 
 #spacer { margin-top: 10%; }
-#parent { white-space: nowrap; }
+#parent { 
+    vertical-align: top;
+    white-space: nowrap; 
+
+}
 
 #underrubrik {
     animation: ease-in 500ms smooth;
@@ -64,11 +68,12 @@ img {
     border-color: darkslateblue;
     border-width: 1px;
     border-style: solid;
+    vertical-align: middle;
     display: inline-block;
     margin: auto;
     width: 18%;
-    height: 40%;
-    margin: 0%;
+    height: 20%;
+    padding-bottom: 5%;
 }
 
 #acc {
